Fix card overlap for mobile

--- a/workit-landing-page/src/styles/blocks/founder-message.css
+++ b/workit-landing-page/src/styles/blocks/founder-message.css
@@ -2,13 +2,21 @@
   --founder-message-size-image: var(--size-70);
   --founder-message-overlap-block: var(--size-14);
 
+  display: grid;
+  grid-template-rows: auto var(--founder-message-overlap-block) auto;
+  justify-items: center;
   text-align: center;
 }
 
 .founder-message [data-founder-message-image] {
-  display: inline-block;
-  margin-block-end: calc(-1 * var(--founder-message-overlap-block));
   inline-size: var(--founder-message-size-image);
+  grid-column: 1;
+  grid-row: 1 / 3;
+}
+
+.founder-message [data-founder-message-card] {
+  grid-column: 1;
+  grid-row: 2 / -1;
 }
 
 /* tablet */
@@ -17,7 +25,6 @@
     --founder-message-overlap-inline: var(--size-26);
     --founder-message-overlap-block: var(--size-32);
 
-    display: grid;
     grid-template-columns: auto var(--founder-message-overlap-inline) 1fr;
     grid-template-rows:
       calc(
